--- a/build.gradle
+++ b/build.gradle
@@ -65,12 +65,10 @@ dependencies {
     testRuntimeOnly("org.seleniumhq.selenium:selenium-safari-driver:4.19.1")
     testImplementation("io.micronaut:micronaut-http-client")
 
-    implementation 'org.grails.plugins:spring-security-core:6.1.2'
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc17:23.7.0.25.01'
 
-//    runtimeOnly 'com.oracle.database.jdbc:ojdbc17:23.7.0.25.01'
-
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3' // Use the latest version
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1' // Ensure you have Selenium Java
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
 
 }
 
