--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -48,10 +48,11 @@ grails:
     default:
       codec: html
 dataSource:
-  url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-  driverClassName: org.h2.Driver
-  username: sa
-  password: ''
+  url: jdbc:oracle:thin:@localhost:1521/orclpdb1
+  driverClassName: oracle.jdbc.OracleDriver
+  dialect: org.hibernate.dialect.Oracle12cDialect
+  username: linksharing
+  password: 'linksharing'
   pooled: true
   jmxExport: true
   dbCreate: create-drop
