--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,8 @@ dependencies {
 
     runtimeOnly 'com.oracle.database.jdbc:ojdbc17:23.7.0.25.01'
 
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.18.1'
-
+    runtimeOnly 'org.grails.plugins:grails-console:2.1.1'
+    implementation(group: 'org.codehaus.groovy', name: 'groovy-dateutil', version: '3.0.13')
 }
 
 application {
