--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -4,6 +4,9 @@ info:
     version: '@info.app.version@'
     grailsVersion: '@info.app.grailsVersion@'
 grails:
+  plugin:
+    console:
+      enabled: true
   mime:
     disable:
       accept:
