Subscriptions are saving to db, autosaving when user creates a topic.

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -58,7 +58,7 @@ dataSource:
   password: 'linksharing'
   pooled: true
   jmxExport: true
-  dbCreate: update
+  dbCreate: create-drop
 hibernate:
 #  allow_update_outside_transaction: true
   cache:
