--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -6,15 +6,16 @@ info:
 grails:
   mail:
     host: smtp.gmail.com
-    port: 587
+    port: 465
     username: rxl.priyanshu.barnwal@gmail.com
-    password: Priyanshu@2004
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
+    password:
+    props:
+      mail.smtp.auth: true
+      mail.smtp.socketFactory.port: 465
+      mail.smtp.socketFactory.class: javax.net.ssl.SSLSocketFactory
+      mail.smtp.socketFactory.fallback: false
+      default:
+        from: youraccount@gmail.com
   plugin:
     console:
       enabled: true
