--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -15,7 +15,7 @@ grails:
       mail.smtp.socketFactory.class: javax.net.ssl.SSLSocketFactory
       mail.smtp.socketFactory.fallback: false
       default:
-        from: youraccount@gmail.com
+        from: barnwal.priyanshu4@gmail.com
   plugin:
     console:
       enabled: true
