--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -74,9 +74,9 @@ dataSource:
   password: 'linksharing'
   pooled: true
   jmxExport: true
-  dbCreate: create-drop
+  dbCreate: update
 hibernate:
-#  allow_update_outside_transaction: true
+  allow_update_outside_transaction: true
   cache:
     queries: false
     use_second_level_cache: false
